# Quadruped-robot

./: DOG_SOCKET.h  Quadruped_robot.py  README.md  TCP_Client  TCP_Client.cpp  TCP_Server  TCP_Server.cpp  animal and sound.py  readme.md  server.py  客户端测试.py  服务端测试.py
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/devel/: .catkin
catkin_ws/devel/.private/ldlidar_stl_ros/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/mini2_description/: .catkin  local_setup.sh  setup.sh
catkin_ws/devel/.private/xgo/: .catkin  setup.sh
catkin_ws/devel/.private/xgo_camera/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/lib/pkgconfig/: xgo.pc  (+3 more)
catkin_ws/logs/xgo_camera/: build.cmake.000.log.stderr  build.cmake.003.log.stderr  build.cmake.004.log.stderr  build.cmake.005.log.stderr
catkin_ws/logs/xgo_ros/: build.cmake.000.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr
catkin_ws/src/mini2_description/: CMakeLists.txt
catkin_ws/src/xgo/: CMakeLists.txt
catkin_ws/src/xgo_camera/: CMakeLists.txt
catkin_ws/src/xgo_camera/launch/: xgo_camera.launch
catkin_ws/src/xgo_camera/src/: aruco_demo.py  camera_demo.py  pick_and_place.py  xgo_camera.py  xgolib.py
movement_code/: pick_and_place_demo.py
my_code/: Quadruped_robot.py  Quadruped_robot_dog1.py  Quadruped_robot_dog2.py
scoket/client/: client.cpp
scoket/server/: ConsoleApplication1.cpp
scoket/socket/: CMakeLists.txt  SocketServer.cpp  SocketServer.h  win_client.cpp  win_server.cpp
vision_code/: QR.py  RGB检测.py  R检测.py  animal.py  sound.py
win_scoket/client/: client.sln  client.vcxproj
win_scoket/server/: ConsoleApplication1.sln  ConsoleApplication1.vcxproj
(+69 files in other folders)
